added readme file & more info about zodiac animals in JS

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
         <label for="year">Enter your year of birth:</label>
         <input id="year" type="number">
         <button>Tell me!</button>
-        <h2></h2>
-        <p></p>
+        <h2 class="animal"></h2>
+        <p class="personality"></p>
+        <p class="info"></p>
     </div>
     <script type="text/javascript" src="js/main.js"></script>
 </body>
